redacted-compiler-plugin/testData/diagnostic/DataObject.kt
// RENDER_DIAGNOSTICS_FULL_TEXT

<!REDACTED_ERROR!>@Redacted<!>
data object DataObject
